--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -1,12 +1,12 @@
-<header id="header" class="alt" >
-  <h1><a href="/">Udruga Adonis</a></h1>
+<header id="header" class="alt">
+  <h1><a href="index.html">Udruga Adonis<!-- Stavit logo --></a></h1>
   <nav id="nav">
     <ul>
-      <li><a href="/">Naslovna</a></li>
-      <li><a href="/about/">O nama</a></li>
-      <li><a href="/projekti/">Projekti</a></li>
-      <li><a href="/donacije/">Donacije</a></li>
-      <li><a href="/kontakt/">Kontakt</a></li>
+      <li><a href="{{ '/' | url }}">Naslovna</a></li>
+      <li><a href="{{ '/about/' | url }}">O nama</a></li>
+      <li><a href="{{ '/projekti/' | url }}">Projekti</a></li>
+      <li><a href="{{ '/donacije/' | url }}">Donacije</a></li>
+      <li><a href="{{ '/kontakt/' | url }}">Kontakt</a></li>
     </ul>
   </nav>
 </header>
