--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -1,5 +1,5 @@
 <header id="header" class="alt">
-  <h1><a href="index.html">Udruga Adonis<!-- Stavit logo --></a></h1>
+  <h1><a href="{{ '/' | url }}">Udruga Adonis</a></h1>
   <nav id="nav">
     <ul>
       <li><a href="{{ '/' | url }}">Naslovna</a></li>
@@ -11,5 +11,5 @@
   </nav>
 </header>
 <section id="banner" class="alt">
-    <h2>{{ title }}</h2>
+  <h2>{{ title }}</h2>
 </section>
