--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -30,3 +30,11 @@
     <script src="{{ '/assets/js/main.js' | url }}"></script>
   </body>
 </html>
+<!-- Scripts (prefix-aware) -->
+<script src="{{ '/assets/js/jquery.min.js' | url }}"></script>
+<script src="{{ '/assets/js/jquery.dropotron.min.js' | url }}"></script>
+<script src="{{ '/assets/js/jquery.scrollex.min.js' | url }}"></script>
+<script src="{{ '/assets/js/browser.min.js' | url }}"></script>
+<script src="{{ '/assets/js/breakpoints.min.js' | url }}"></script>
+<script src="{{ '/assets/js/util.js' | url }}"></script>
+<script src="{{ '/assets/js/main.js' | url }}"></script>
