--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -1,4 +1,4 @@
-<header id="header" class="alt">
+<header id="header"{% if page.url != '/' %} class="alt"{% endif %}>
   <h1><a href="{{ '/' | url }}">Udruga Adonis</a></h1>
   <nav id="nav">
     <ul>
@@ -11,7 +11,6 @@
   </nav>
 </header>
 
-{# Show the default page banner on all pages EXCEPT the homepage #}
 {% if page.url != '/' and title %}
 <section id="banner" class="alt">
   <h2>{{ title }}</h2>
