--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -1,4 +1,4 @@
-<header id="header"{% if page.url != '/' %} class="alt"{% endif %}>
+<header id="header" class="alt">
   <h1><a href="{{ '/' | url }}">Udruga Adonis</a></h1>
   <nav id="nav">
     <ul>
