--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -2,11 +2,14 @@
   <h1><a href="{{ '/' | url }}">Udruga Adonis</a></h1>
   <nav id="nav">
     <ul>
-      <li><a href="{{ '/' | url }}">Naslovna</a></li>
       <li><a href="{{ '/about/' | url }}">O nama</a></li>
       <li><a href="{{ '/projekti/' | url }}">Projekti</a></li>
+      <li><a href="{{ '/mediji/' | url }}">Mediji</a></li>
+      <li><a href="{{ '/prijavnice/' | url }}">Prijavnice</a></li>
+      <li><a href="{{ '/novosti/' | url }}">Novosti</a></li>
       <li><a href="{{ '/donacije/' | url }}">Donacije</a></li>
       <li><a href="{{ '/kontakt/' | url }}">Kontakt</a></li>
+      <li><a href="{{ '/shop/' | url }}">Shop</a></li>
     </ul>
   </nav>
 </header>
