--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -1,5 +1,9 @@
 <header id="header" class="alt">
-  <h1><a href="{{ '/' | url }}">Udruga Adonis</a></h1>
+  <h1>
+    <a href="{{ '/' | url }}">
+      <img src="{{ '/assets/images/logoAdonis1.png' | url }}" alt="Udruga Adonis" />
+    </a>
+  </h1>
   <nav id="nav">
     <ul>
       <li><a href="{{ '/about/' | url }}">O nama</a></li>
