--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -1,7 +1,7 @@
 <header id="header" class="alt">
   <h1>
     <a href="{{ '/' | url }}">
-      <img src="{{ '/images/logoAdonis1.png' | url }}" alt="Udruga Adonis" />
+      <img src="{{ '/images/logo.png' | url }}" alt="Udruga Adonis" />
     </a>
   </h1>
   <nav id="nav">
