--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,7 @@
 	}
 
 	article, aside, details, figcaption, figure,
-	footer, header, hgroup, menu, nav, section {
+	footer, , hgroup, menu, nav, section {
 		display: block;
 	}
 
@@ -3072,7 +3072,7 @@
 			-ms-animation: none;
 			animation: none;
 			background: none;
-			color: rgba(255, 255, 255, 0.75);
+			color: #459a43;
 			position: absolute;
 		}
 
@@ -3227,7 +3227,7 @@
 			#banner input[type="reset"].primary,
 			#banner input[type="button"].primary,
 			#banner .button.primary {
-				background: #fff;
+				background: #7136c9;
 				color: #666 !important;
 			}
 
@@ -3235,6 +3235,7 @@
 
 	#main {
 		padding: 4em 0;
+		background: #dff6dd;
 	}
 
 		#main > header {
