--- a/_includes/footer.njk
+++ b/_includes/footer.njk
@@ -1,3 +1,7 @@
 <footer id="footer">
-  <p>&copy; Udruga Adonis. Sva prava pridržana.</p>
+  <div class="footer-inner">
+    <div class="footer-left">udruga.adonis@gmail.com</div>
+    <div class="footer-center">&copy; Udruga Adonis. Sva prava pridržana.</div>
+    <div class="footer-right">+385 95 577 91 90</div>
+  </div>
 </footer>
