--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -12,13 +12,14 @@
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | url }}">
     <noscript><link rel="stylesheet" href="{{ '/assets/css/noscript.css' | url }}"></noscript>
   </head>
+
   <body class="landing is-preload">
     <div id="page-wrapper">
 
       {% include "header.njk" %}
 
-      <main>
-        {{ content | safe }}
+      <main class="green-bg">
+        {% block content %}{{ content | safe }}{% endblock %}
       </main>
 
       {% include "footer.njk" %}
@@ -27,14 +28,11 @@
 
     <!-- Scripts (prefix-aware) -->
     <script src="{{ '/assets/js/jquery.min.js' | url }}"></script>
+    <script src="{{ '/assets/js/jquery.dropotron.min.js' | url }}"></script>
+    <script src="{{ '/assets/js/jquery.scrollex.min.js' | url }}"></script>
+    <script src="{{ '/assets/js/browser.min.js' | url }}"></script>
+    <script src="{{ '/assets/js/breakpoints.min.js' | url }}"></script>
+    <script src="{{ '/assets/js/util.js' | url }}"></script>
     <script src="{{ '/assets/js/main.js' | url }}"></script>
   </body>
 </html>
-<!-- Scripts (prefix-aware) -->
-<script src="{{ '/assets/js/jquery.min.js' | url }}"></script>
-<script src="{{ '/assets/js/jquery.dropotron.min.js' | url }}"></script>
-<script src="{{ '/assets/js/jquery.scrollex.min.js' | url }}"></script>
-<script src="{{ '/assets/js/browser.min.js' | url }}"></script>
-<script src="{{ '/assets/js/breakpoints.min.js' | url }}"></script>
-<script src="{{ '/assets/js/util.js' | url }}"></script>
-<script src="{{ '/assets/js/main.js' | url }}"></script>
