--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -4,6 +4,7 @@
     </a>
   <nav id="nav">
     <ul>
+      <li><a href="{{ '/' | url }}" class="mobile-only">Naslovna</a></li>
       <li><a href="{{ '/about/' | url }}">O nama</a></li>
       <li><a href="{{ '/projekti/' | url }}">Projekti</a></li>
       <li><a href="{{ '/mediji/' | url }}">Mediji</a></li>
