--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -1,6 +1,7 @@
 <header id="header" class="alt">
     <a href="{{ '/' | url }}">
       <img class="logo" src="{{ '/images/logo.png' | url }}" alt="Udruga Adonis" />
+      <div>Humantirna Udruga Adonis</div>
     </a>
   <nav id="nav">
     <ul>
