--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -2,8 +2,8 @@
   <div class="logo-container">
     <a href="{{ '/' | url }}" class="title">
       <img class="logo" src="{{ '/images/logo.png' | url }}" alt="Udruga Adonis" />
-      <span class="title full-text">Humanitarna Udruga Adonis</span>
-      <span class="title short-text">Adonis</span>
+      <span class="title-text full-text">Humanitarna Udruga Adonis</span>
+      <span class="short-text">Adonis</span>
     </a>
   </div>
   <nav id="nav">
