UI popravci, validacija formi

--- a/_includes/footer.njk
+++ b/_includes/footer.njk
@@ -1,7 +1,23 @@
 <footer id="footer">
   <div class="footer-inner">
-    <div class="footer-left">udruga.adonis@gmail.com</div>
-    <div class="footer-center">&copy; Humanitarna udruga Adonis. Sva prava pridržana.</div>
-    <div class="footer-right">+385 95 577 91 90</div>
+    <div class="footer-left">
+      <a class="alt" href="mailto:udruga.adonis@gmail.com">udruga.adonis@gmail.com</a>
+    </div>
+
+    <div class="footer-center">
+      &copy; Humanitarna udruga Adonis. Sva prava pridržana.
+    </div>
+
+    <div class="footer-right">
+      <a class="alt" href="tel:+385955779190">+385 95 577 91 90</a>
+      &nbsp;
+        <a class="social-link alt" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+          <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
+        </a>
+        &nbsp;
+        <a class="social-link alt" href="https://www.instagram.com/udrugaadonis/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+          <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+        </a>
+    </div>
   </div>
 </footer>
