--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -16,7 +16,7 @@
       <li><a href="{{ '/novosti/' | url }}">Novosti</a></li>
       <li><a href="{{ '/donacije/' | url }}">Donacije</a></li>
       <li><a href="{{ '/kontakt/' | url }}">Kontakt</a></li>
-      <li><a href="{{ '/shop/' | url }}">Shop</a></li>
+      <li><a href="{{ '/darovi-s-pricom/' | url }}">Darovi s pričom</a></li>
     </ul>
   </nav>
 </header>
