--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -9,6 +9,7 @@
     <base href="{{ '/' | url }}">
 
     <!-- Styles -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | url }}">
     <noscript><link rel="stylesheet" href="{{ '/assets/css/noscript.css' | url }}"></noscript>
   </head>
