--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 /*
 	Alpha by HTML5 UP
@@ -3097,7 +3098,7 @@
 			-webkit-animation: none;
 			-ms-animation: none;
 			animation: none;
-			background: #353333d6;
+			background: #100d0678;
 			color: rgba(255, 255, 255, 0.75);; /* header color 459a43 */
 			position: absolute;
 		}
@@ -3212,7 +3213,7 @@
 	}
 	
 	.filter{
-		background: #100d0687;
+		background: #100d0678;
 		margin-left: 20%;
 		margin-right: 20%;
 		padding: 2em;
