--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4188,3 +4188,14 @@ textarea[aria-invalid="true"] {
 #katalog .catalog-item .actions {
   margin-top: auto;
 }
+.visually-hidden {
+  position: absolute !important;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap; /* prevent line break */
+  border: 0;
+}
