--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -9,7 +9,7 @@
   <nav id="nav">
     <ul>
       <li><a href="{{ '/' | url }}" class="mobile-only">Naslovna</a></li>
-      <li><a href="{{ '/about/' | url }}">O nama</a></li>
+      <li><a href="{{ '/o-nama/' | url }}">O nama</a></li>
       <li><a href="{{ '/projekti/' | url }}">Projekti</a></li>
       <li><a href="{{ '/mediji/' | url }}">Mediji</a></li>
       <li><a href="{{ '/prijavnice/' | url }}">Prijavnice</a></li>
