--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -3,7 +3,7 @@
   <head>
     <title>{{ title }}</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="{{ description | default('Humanitarna udruga ADONIS – projekti, događanja i podrška djeci i mladima.') | striptags }}">
     <link rel="canonical" href="{{ site.url }}{{ page.url | url }}">
     <meta name="robots" content="{{ robots | default('index,follow') }}">
