Font, navigacija i linkovi. Banner update

--- a/_includes/footer.njk
+++ b/_includes/footer.njk
@@ -15,7 +15,7 @@
           <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
         </a>
         &nbsp;
-        <a class="social-link alt" href="https://www.instagram.com/udrugaadonis/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+        <a class="social-link alt" href="https://www.facebook.com/profile.php?id=61581733494593&locale=hr_HR" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
           <i class="fa-brands fa-instagram" aria-hidden="true"></i>
         </a>
     </div>
