Sitemap, instagram, facebook

--- a/_includes/footer.njk
+++ b/_includes/footer.njk
@@ -11,11 +11,11 @@
     <div class="footer-right">
       <a class="alt" href="tel:+385955779190">+385 95 577 91 90</a>
       &nbsp;
-        <a class="social-link alt" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+        <a class="social-link alt" href="https://www.facebook.com/profile.php?id=61581733494593&locale=hr_HR" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
           <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
         </a>
         &nbsp;
-        <a class="social-link alt" href="https://www.facebook.com/profile.php?id=61581733494593&locale=hr_HR" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+        <a class="social-link alt" href="https://www.instagram.com/udrugaadonis/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
           <i class="fa-brands fa-instagram" aria-hidden="true"></i>
         </a>
     </div>
